- Administrator dashboard - Fix login manager not redirecting to login - Fix toast messages - Remove CORS since it is not needed anymore

--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -73,7 +73,8 @@
                         <h5 class="card-title">Learn Hiragana</h5>
                         <p class="card-text">Hiragana is the foundation of the Japanese writing system, used for native
                             words, grammar, and verb endings. It's essential for beginners to learn first.</p>
-                        <a href="/#courses" class="w-100 btn btn-secondary">Coming Soon</a>
+                        <p class="text-success">Price: {{ hiragana_price }}$</p>
+                        <a href="/auth/register" class="w-100 btn btn-danger">Sign Up Now</a>
                     </div>
                 </div>
             </div>
@@ -84,6 +85,7 @@
                         <h5 class="card-title">Learn Katakana</h5>
                         <p class="card-text">Katakana is primarily used for foreign loanwords, names, and onomatopoeia.
                             It's the second script you'll need to master after Hiragana.</p>
+                        <p class="text-danger">Price: {{ katakana_price }}$</p>
                         <a href="/#courses" class="w-100 btn btn-secondary">Coming Soon</a>
                     </div>
                 </div>
@@ -96,7 +98,8 @@
                         <p class="card-text">Kanji are characters borrowed from Chinese, representing entire words or
                             concepts. They're more complex but crucial for reading and writing in Japanese.
                         </p>
-                        <a href="/auth/register" class="w-100 btn btn-danger">Sign Up Now</a>
+                        <p class="text-danger">Price: {{ kanji_price }}$</p>
+                        <a href="/#courses" class="w-100 btn btn-secondary">Coming Soon</a>
                     </div>
                 </div>
             </div>
