--- a/app/web/templates/customer/learn.html
+++ b/app/web/templates/customer/learn.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="container mt-4">
-        <div class="row justify-content-center">
+    <div class="container mt-4" style="min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+        <div class="row justify-content-center w-100">
             <div class="col-sm-6 col-md-4">
                 <!-- Progress Bar -->
                 <div class="mb-3">
