--- a/app/web/templates/auth/register.html
+++ b/app/web/templates/auth/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="text-center">
         <div class="form-signin mx-auto" style="max-width: 400px; height: 75vh; top: 50%; transform: translateY(25%);">
-            <form action="/auth/login" method="POST">
+            <form action="{{ url_for('auth.register') }}" method="POST">
                 <img class="mb-4" src="/img/temple.svg" alt="" width="72" height="57">
 
                 <h1 class="h3 mb-3 fw-normal">Register</h1>
@@ -11,39 +11,57 @@
                 {{ form.hidden_tag() }}
 
                 <div class="form-floating mb-3">
-                    {{ form.name(size=20, class_="form-control", placeholder="") }}
+                    {{ form.name(size=20, class_="form-control", placeholder="Full Name") }}
                     {{ form.name.label(class_="form-label") }}
+                    {% if form.name.errors %}
+                        <div class="text-danger small">
+                            {% for error in form.name.errors %}
+                                <div>{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
 
                 <div class="form-floating mb-3">
-                    {{ form.username(size=20, class_="form-control", placeholder="") }}
+                    {{ form.username(size=20, class_="form-control", placeholder="Username") }}
                     {{ form.username.label(class_="form-label") }}
+                    {% if form.username.errors %}
+                        <div class="text-danger small">
+                            {% for error in form.username.errors %}
+                                <div>{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
 
                 <div class="form-floating mb-3">
-                    {{ form.password(size=20, class_="form-control", placeholder="") }}
+                    {{ form.password(size=20, class_="form-control", placeholder="Password") }}
                     {{ form.password.label(class_="form-label") }}
+                    {% if form.password.errors %}
+                        <div class="text-danger small">
+                            {% for error in form.password.errors %}
+                                <div>{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
 
                 <div class="form-floating mb-3">
-                    {{ form.confirmation(size=20, class_="form-control", placeholder="") }}
+                    {{ form.confirmation(size=20, class_="form-control", placeholder="Confirm Password") }}
                     {{ form.confirmation.label(class_="form-label") }}
+                    {% if form.confirmation.errors %}
+                        <div class="text-danger small">
+                            {% for error in form.confirmation.errors %}
+                                <div>{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
-
-                {{ form.csrf_token }}
 
                 {{ form.submit(class_="btn btn-danger w-100") }}
 
-                <div class="flashes">
-                    {% with messages = get_flashed_messages() %}
-                        {% if messages %}
-                            <ul class=flashes>
-                                {% for message in messages %}
-                                    <li>{{ message }}</li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
-                    {% endwith %}
+                <div class="mt-3">
+                    <p class="text-muted">Already have an account? <a href="{{ url_for('auth.login') }}">Log in here</a></p>
                 </div>
             </form>
         </div>
