--- a/app/web/templates/customer/draw.html
+++ b/app/web/templates/customer/draw.html
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="d-md-flex flex-md-equal w-100 position-relative" style="min-height: 95vh;">
+<div class="mt-3 d-md-flex flex-md-equal w-100 position-relative" style="min-height: 95vh;">
     <!-- Left Panel - Character Display -->
     <div class="w-50 text-bg-dark pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden flex-grow-1">
         <a href="{{ url_for('customer.courses') }}" class="btn btn-danger text-white"
